@@ -1,3 +1,8 @@
+Development Version
+===================
+- Added format_timedelta().
+
+
 Version 0.7 - July 3rd, 2010
 ============================
 Added several features borrowed from flask-babel:
